--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -56,7 +56,7 @@
             android:id="@+id/age_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
+            android:inputType="number"
             android:maxLines="4" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,24 +79,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="@string/price_value"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/type">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/price_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:maxLines="4" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,7 +87,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/price">
+        app:layout_constraintTop_toBottomOf="@id/type">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/save_btn"
