--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="@id/ic_model"
         app:layout_constraintBottom_toBottomOf="@id/ic_model"
         app:layout_constraintStart_toEndOf="@id/ic_model"
-        tools:text="Model" />
+        tools:text="Model"/>
 
     <View
         android:id="@+id/divider_model"
@@ -90,7 +90,6 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="6"
-        android:inputType = "textCapWords"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:singleLine="false"
@@ -109,6 +108,29 @@
         app:layout_constraintTop_toBottomOf="@id/ic_type"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/ic_fuel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_fuel"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/divider_type"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/fuel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="6"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:singleLine="false"
+        android:textAppearance="?attr/textAppearanceBody2"
+        app:layout_constraintStart_toEndOf="@id/ic_fuel"
+        app:layout_constraintTop_toTopOf="@+id/ic_fuel"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="Fuel type" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/edit_cars_fab"
