added logos function, fixed detail and list grfragment. minor bug fix

--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -31,6 +31,7 @@
         android:id="@+id/model"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:layout_marginStart="8dp"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@id/ic_model"
@@ -60,6 +61,7 @@
         android:id="@+id/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:layout_marginStart="8dp"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@+id/ic_calendar"
@@ -90,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:maxLines="1"
         android:singleLine="false"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@+id/ic_type"
@@ -120,6 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:maxLines="1"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@+id/ic_fuel"
         app:layout_constraintBottom_toBottomOf="@id/ic_fuel"
@@ -147,6 +151,7 @@
     <TextView
         android:id="@+id/chilometer"
         android:layout_width="wrap_content"
+        android:maxLines="1"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textAppearance="?attr/textAppearanceBody2"
@@ -180,8 +185,8 @@
         android:layout_marginStart="8dp"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@+id/ic_license_plate"
-        android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="@id/ic_license_plate"
+        android:maxLines="1"
         app:layout_constraintStart_toEndOf="@id/ic_license_plate"
         tools:text="License plate" />
 
@@ -208,6 +213,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:maxLines="1"
         android:textAppearance="?attr/textAppearanceBody2"
         app:layout_constraintTop_toTopOf="@+id/ic_displacement"
         app:layout_constraintBottom_toBottomOf="@id/ic_displacement"
