--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textAutoComplete"
+            android:maxLines="1"
             android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -38,6 +39,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/model_input"
             android:layout_width="match_parent"
+            android:maxLines="1"
             android:layout_height="match_parent"
             android:inputType="textAutoComplete" />
 
@@ -57,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLines="4" />
+            android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:maxLines="4" />
+            android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,7 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:maxLines="4" />
+            android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLines="4" />
+            android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -129,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:maxLines="4" />
+            android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -147,7 +149,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLines="4" />
+            android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
 
