--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -16,11 +16,21 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp">
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/divider_model"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="@{cars.name}"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
@@ -33,19 +43,64 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{cars.model}"
+            android:text="@string/modelInf"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
-            tools:text="Model: x" />
+            tools:text="Model: " />
+
+        <TextView
+            android:id="@+id/modelInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="8dp"
+            android:text="@{cars.model}"
+            android:textAppearance="?attr/textAppearanceBody2"
+            app:layout_constraintBottom_toBottomOf="@+id/model"
+            app:layout_constraintStart_toEndOf="@id/model"
+            tools:text="model" />
+
+        <View
+            android:id="@+id/divider_license"
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
+            android:background="?attr/dividerVertical"
+            app:layout_constraintBottom_toBottomOf="@+id/modelInfo"
+            app:layout_constraintStart_toEndOf="@id/modelInfo" />
+
+        <TextView
+            android:id="@+id/plateInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/plateInf"
+            android:textAppearance="?attr/textAppearanceBody2"
+            app:layout_constraintBottom_toBottomOf="@+id/modelInfo"
+            app:layout_constraintStart_toEndOf="@id/modelInfo"
+            tools:text="Plate:" />
+
+        <TextView
+            android:id="@+id/plate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@{cars.license}"
+            android:textAppearance="?attr/textAppearanceBody2"
+            app:layout_constraintBottom_toBottomOf="@+id/plateInfo"
+            app:layout_constraintStart_toEndOf="@id/plateInfo"
+            tools:text="plate" />
+
         <View
             android:id="@+id/divider_model"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="8dp"
             android:background="?attr/dividerHorizontal"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toBottomOf="@id/model"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
