--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -18,10 +18,9 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_launcher_background"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
+            android:layout_width="95dp"
+            android:layout_height="95dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/divider_model"
             app:layout_constraintTop_toTopOf="parent" />
