--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -225,6 +225,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:visibility="invisible"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_build"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -243,6 +244,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/delete_cars_fab"
         android:layout_width="wrap_content"
+        android:visibility="invisible"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
