--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillViewport="true">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -216,9 +219,9 @@
         android:layout_marginStart="8dp"
         android:maxLines="1"
         android:textAppearance="?attr/textAppearanceBody2"
-        app:layout_constraintTop_toTopOf="@+id/ic_displacement"
         app:layout_constraintBottom_toBottomOf="@id/ic_displacement"
         app:layout_constraintStart_toEndOf="@id/ic_displacement"
+        app:layout_constraintTop_toTopOf="@+id/ic_displacement"
         tools:text="Displacement" />
 
     <ImageView
@@ -226,19 +229,19 @@
         android:layout_width="95dp"
         android:layout_height="95dp"
         android:scaleType="centerInside"
+        android:src="@drawable/ic_under_construction"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider_plate"
-        android:src="@drawable/ic_under_construction"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/displacement" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/edit_cars_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_build"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -257,7 +260,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/delete_cars_fab"
         android:layout_width="wrap_content"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
@@ -266,3 +269,4 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
