--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -23,7 +23,8 @@
             android:layout_height="95dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/divider_model"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:id="@+id/name"
