--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -268,5 +268,7 @@
         app:layout_constraintBottom_toTopOf="@id/edit_cars_fab"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- TODO: Fix layout for better user experience-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
