--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -170,6 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/save" />
 
         <com.google.android.material.button.MaterialButton
@@ -177,8 +178,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/delete"
             android:visibility="gone" />
+
+        <!-- TODO: Fix layout for better user experience-->
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
