--- a/app/src/main/res/drawable/ic_fuel.xml
+++ b/app/src/main/res/drawable/ic_fuel.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
     android:viewportWidth="299"
     android:viewportHeight="299"
-    android:tint="#000000"
+    android:tint="@color/primaryColor"
     android:width="24dp"
     android:height="24dp">
     <path
