--- a/app/src/main/res/drawable/ic_license_plate.xml
+++ b/app/src/main/res/drawable/ic_license_plate.xml
@@ -1,5 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
     android:viewportWidth="512"
+    android:tint="@color/primaryColor"
     android:viewportHeight="512"
     android:width="23dp"
     android:height="23dp">
