--- a/app/src/main/res/drawable/ic_piston.xml
+++ b/app/src/main/res/drawable/ic_piston.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
     android:viewportWidth="476.977"
     android:viewportHeight="476.977"
+    android:tint="@color/primaryColor"
     android:width="23dp"
     android:height="23dp">
     <path
