Added regex for check the valid input for licenseplate

--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -60,6 +60,7 @@
             android:id="@+id/age_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="4"
             android:inputType="number"
             android:maxLines="1" />
 
@@ -133,6 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
+            android:maxLength="7"
             android:maxLines="1"  />
 
     </com.google.android.material.textfield.TextInputLayout>
