--- a/app/src/main/res/layout-sw600dp/fragment_cars_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_cars_detail.xml
@@ -219,17 +219,18 @@
         app:layout_constraintTop_toTopOf="@+id/ic_displacement"
         tools:text="Displacement" />
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/image"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_under_construction"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:riv_corner_radius="20dip"
+        android:background="@color/primaryDarkColor"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/displacement" />
-
+        app:layout_constraintTop_toBottomOf="@+id/displacement"
+        app:riv_mutate_background="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/edit_cars_fab"
