--- a/app/src/main/res/layout-land/fragment_cars_detail.xml
+++ b/app/src/main/res/layout-land/fragment_cars_detail.xml
@@ -39,18 +39,20 @@
             android:layout_marginTop="8dp"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textSize="34sp"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/image"
             app:layout_constraintStart_toStartOf="@+id/divider_model"
-            app:layout_constraintTop_toBottomOf="@+id/image"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Name" />
 
 
         <View
             android:id="@+id/divider_model"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_margin="16dp"
             android:background="?attr/dividerHorizontal"
+            app:layout_constraintEnd_toStartOf="@+id/image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -77,10 +79,11 @@
 
         <View
             android:id="@+id/divider_age"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_margin="16dp"
             android:background="?attr/dividerHorizontal"
+            app:layout_constraintEnd_toStartOf="@+id/image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ic_calendar" />
 
@@ -108,10 +111,11 @@
 
         <View
             android:id="@+id/divider_type"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_margin="16dp"
             android:background="?attr/dividerHorizontal"
+            app:layout_constraintEnd_toStartOf="@+id/image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ic_type" />
 
@@ -228,13 +232,13 @@
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/image"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@color/primaryDarkColor"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:riv_corner_radius="20dip"
             app:riv_mutate_background="true" />
