Fixed layout and size of text in landscape, portrait and tablet layout 'in Cars list and Cars Detail'

--- a/app/src/main/res/layout-land/fragment_cars_detail.xml
+++ b/app/src/main/res/layout-land/fragment_cars_detail.xml
@@ -72,6 +72,7 @@
             android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_calendar"
             app:layout_constraintStart_toEndOf="@id/ic_calendar"
             app:layout_constraintTop_toTopOf="@+id/ic_calendar"
@@ -104,6 +105,7 @@
             android:maxLines="1"
             android:singleLine="false"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_type"
             app:layout_constraintStart_toEndOf="@id/ic_type"
             app:layout_constraintTop_toTopOf="@+id/ic_type"
@@ -135,6 +137,7 @@
             android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_fuel"
             app:layout_constraintStart_toEndOf="@id/ic_fuel"
             app:layout_constraintTop_toTopOf="@+id/ic_fuel"
@@ -165,6 +168,7 @@
             android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_chilom"
             app:layout_constraintStart_toEndOf="@id/ic_chilom"
             app:layout_constraintTop_toTopOf="@+id/ic_chilom"
@@ -195,6 +199,7 @@
             android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_license_plate"
             app:layout_constraintStart_toEndOf="@id/ic_license_plate"
             app:layout_constraintTop_toTopOf="@+id/ic_license_plate"
@@ -225,6 +230,7 @@
             android:layout_marginStart="8dp"
             android:maxLines="1"
             android:textAppearance="?attr/textAppearanceBody2"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/ic_displacement"
             app:layout_constraintStart_toEndOf="@id/ic_displacement"
             app:layout_constraintTop_toTopOf="@+id/ic_displacement"
@@ -262,7 +268,8 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/displacement" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/delete_cars_fab"
@@ -274,8 +281,6 @@
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/edit_cars_fab"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <!-- TODO: Fix layout for better user experience-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
