--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -33,7 +33,8 @@
             android:id="@+id/name"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
+            android:textSize="23sp"
             android:text="@{cars.name}"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
