--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -44,13 +44,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="textAutoComplete"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/age_label"
-            android:layout_width="160dp"
+            android:layout_width="180dp"
             android:layout_height="54dp"
             android:layout_marginTop="16dp"
             android:hint="@string/age"
@@ -63,7 +64,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="4"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -83,7 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -101,7 +104,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,7 +123,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -140,7 +145,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:maxLength="7"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -160,7 +166,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
